src/components/Charts/DynamicChart.module.css
.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 47%;
  margin: 0.7rem auto;
  background-color: white;
  border-radius: 0.5rem;
  /* box-shadow: lightslategray; */
  /* -webkit-box-shadow: 2px 1px 3px 2px rgba(126, 140, 136, 0.7);
  box-shadow: 2px 1px 3px 2px rgba(126, 140, 136, 0.7); */
  /* background-color: rgba(204, 143, 68, 0.6); */
}

.sample {
  width: 100%;
}

.chartContainer {
  padding: 0 1rem 1rem 1rem;
  border-radius: 0.5rem;
}

.inputBar {
  /* padding-bottom: 0.5rem; */
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  margin-bottom: 1rem;
  text-align: center;
}

.headerContainer {
  display: flex;
  flex-direction: column;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  justify-content: center;
  top: 0;
  width: 100%;
  height: 2.5rem;
  background-color: rgba(202, 195, 240, 0.6);
  color: rgb(51, 50, 50);
  margin-bottom: 1rem;
  border: 1px whitesmoke;
}

.inputBar h5 {
  /* text-transform: capitalize; */
  font-size: 1.5rem;
  font-stretch: expanded;
}

.map {
  /* height: 60vh; */
  height: auto;
  width: 76%;
  margin: 0.7rem auto;
}

.dropdownContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

h1 {
  margin: 0 0 0 1rem;
}

@media (max-width: 500px) {
  .container {
    width: 95%;
    margin: 0.25rem;
    border-radius: 0.1rem;
    padding: 0.75rem 0.25rem 0.25rem 0.25rem;
    font-size: small;
  }

  .map {
    height: 45vh;
  }

  .inputBar {
    justify-content: center;
    margin-bottom: 0.5rem;
  }

  .headerContainer {
    background-color: white;
  }
}

@media (max-width: 900px) {
  .container {
    /* width: 4%; */
    margin: 0.25rem;
    border-radius: 0.1rem;
    padding: 0.75rem 0.25rem 0.25rem 0.25rem;
    font-size: small;
  }

  .map {
    height: 45vh;
  }

  .inputBar {
    justify-content: center;
    margin-bottom: 0.5rem;
  }

  .headerContainer {
    background-color: white;
  }
}

